force-app/main/default/objects/Quotation__c/Quotation__c.object-meta.xml
<CustomObject>
    <label>Quotation</label>
    <nameField>
        <displayFormat>JED-{MM}/{YY}-{000}</displayFormat>
        <label>Quotation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quotations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>