force-app/main/default/objects/Quotation__c/fields/Charges_Included__c.field-meta.xml
<CustomField>
    <fullName>Charges_Included__c</fullName>
    <label>Charges Included</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>