force-app/main/default/objects/Quotation__c/fields/Enquiry_Created__c.field-meta.xml
<CustomField>
    <fullName>Enquiry_Created__c</fullName>
    <formula>Enquiry__r.CreatedDate</formula>
    <label>Enquiry Created</label>
    <type>DateTime</type>
</CustomField>