force-app/main/default/objects/Quotation__c/fields/Inclusions__c.field-meta.xml
<CustomField>
    <fullName>Inclusions__c</fullName>
    <label>Inclusions</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>