force-app/main/default/objects/Quotation__c/fields/isAir__c.field-meta.xml
<CustomField>
    <fullName>isAir__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isAir</label>
    <type>Checkbox</type>
</CustomField>