force-app/main/default/objects/Quotation__c/fields/isRevise__c.field-meta.xml
<CustomField>
    <fullName>isRevise__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRevise</label>
    <type>Checkbox</type>
</CustomField>