force-app/main/default/objects/Quotation__c/fields/Leadc__c.field-meta.xml
<CustomField>
    <fullName>Leadc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Leadc</label>
    <referenceTo>Lead__c</referenceTo>
    <relationshipLabel>Quotations</relationshipLabel>
    <relationshipName>Quotations</relationshipName>
    <type>Lookup</type>
</CustomField>