force-app/main/default/objects/Quotation__c/fields/No_of_Orders__c.field-meta.xml
<CustomField>
    <fullName>No_of_Orders__c</fullName>
    <label>No of Orders</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>