force-app/main/default/objects/Quotation__c/fields/Opportunity_created__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_created__c</fullName>
    <formula>Opportunity__r.CreatedDate</formula>
    <label>Opportunity created</label>
    <type>DateTime</type>
</CustomField>