force-app/main/default/objects/Quotation__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <label>Payment Terms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Credit</fullName>
            </value>
            <value>
                <fullName>Cash Against Invoice</fullName>
            </value>
            <value>
                <fullName>Advance Payment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>