force-app/main/default/objects/Quotation__c/fields/Quotation_Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Turnaround_Time__c</fullName>
    <formula>TEXT(FLOOR(CreatedDate - Enquiry_Created__c)) &amp; &quot; Day(s)&quot; &amp; &apos; &apos;  &amp;
TEXT(ROUND(MOD((CreatedDate - Enquiry_Created__c)*24,24),0)) &amp;&quot; Hour(s) &quot; &amp; &apos; &apos; &amp;
TEXT(ROUND(MOD((CreatedDate - Enquiry_Created__c)*1440,60),0)) &amp;&quot; Minute(s) &quot;</formula>
    <label>Quotation Turnaround Time</label>
    <type>Text</type>
</CustomField>