force-app/main/default/objects/Quotation__c/fields/Quotation_Validity__c.field-meta.xml
<CustomField>
    <fullName>Quotation_Validity__c</fullName>
    <label>Quotation Validity</label>
    <type>Date</type>
</CustomField>