force-app/main/default/objects/Quotation__c/fields/Record_Number__c.field-meta.xml
<CustomField>
    <fullName>Record_Number__c</fullName>
    <label>Record Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>