force-app/main/default/objects/Quotation__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total</label>
    <summarizedField>Quotation_Item__c.Total__c</summarizedField>
    <summaryForeignKey>Quotation_Item__c.Quotation__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>