force-app/main/default/objects/Quotation__c/fields/Turnaround_Time__c.field-meta.xml
<CustomField>
    <fullName>Turnaround_Time__c</fullName>
    <formula>TEXT(FLOOR(CreatedDate -  Opportunity_created__c )) &amp; &quot; Day(s)&quot; &amp; &apos; &apos;  &amp;
TEXT(ROUND(MOD((CreatedDate - Opportunity_created__c )*24,24),0)) &amp;&quot; Hour(s) &quot; &amp; &apos; &apos; &amp;
TEXT(ROUND(MOD((CreatedDate - Opportunity_created__c )*1440,60),0)) &amp;&quot; Minute(s) &quot;</formula>
    <label>Turnaround Time</label>
    <type>Text</type>
</CustomField>